--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -11,11 +11,14 @@
     .wrap-main-img {
       margin-left: -4rem;
       position: relative;
-      z-index: 1;
+      z-index: 0;
 
       img {
         border-radius: $border-radius;
-        width: 100%;
+        max-height: 48rem;
+        min-height: 32rem;
+        width: 98%;
+        object-fit: cover;
       }
     }
   }
