--- a/src/app/modules/home/shared/searching-form/searching-form.component.scss
+++ b/src/app/modules/home/shared/searching-form/searching-form.component.scss
@@ -9,7 +9,7 @@
   padding: 2rem;
   position: relative;
   width: 100%;
-  z-index: 2;
+  z-index: 1;
 
   .search-autocomplete {
     border: 0.1rem solid $input-border;
@@ -39,7 +39,7 @@
     position: relative;
     top: -10rem;
     width: 100%;
-    z-index: 2;
+    z-index: 1;
 
     .search-autocomplete {
       min-width: 29rem;
